# linux-application-development-2020

./: .clang-format  .gitignore  README.md
02_BuildReq/: main.c
03_TerminalProject/: .gitignore  Makefile  README.md  block.c  block.h  file_with_name.c  file_with_name.h  msgs.h  show.c  show.h  view.c
04_Multifile/: Makefile  fun.c  prog.c
05_Environmental/: CMakeLists.txt  README.md  main.c  pcre.c  pcre.h  wstring.c  wstring.h
06_Debugging/: .gitignore  Makefile  main.c
07_DebuggingTracing/: CMakeLists.txt  rm_preload.c
07_DebuggingTracing/tests/: CMakeLists.txt  test1.sh  test2.sh
08_TestingCoverage/: configure.ac
08_TestingCoverage/src/: Makefile.am  buf.h  libbuf.c
08_TestingCoverage/tests/: Makefile.am  grow_trunc.ts  push.ts  test.ts
09_I18nL10n/: Makefile.am  configure.ac  guess.c  guess.pot  ru.po
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess  guess.c  guess.pot  ru.po
11_Toolkits/: CMakeLists.txt  count.c
12_ScriptingText/: configure.ac
12_ScriptingText/src/: buf.h  libbuf.c
12_ScriptingText/tests/: clear_null.ts  pop.ts
13_PatchInstall/: .gitignore  Makefile.am  configure.ac  guess.c  guess.pot  ru.po
